--- a/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -34,7 +34,7 @@
         <!--===========================-->
 
         <avro.version>1.8.1</avro.version>
-        <jackson.version>2.8.5</jackson.version>
+        <!--<jackson.version>2.8.11.1</jackson.version>-->
         <kafka.version>2.0.0</kafka.version>
 
         <!--https://docs.confluent.io/current/clients/install.html?_ga=2.53151595.2105087684.1538406517-910848708.1535980058#installation-maven-->
@@ -65,11 +65,6 @@
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro</artifactId>
                 <version>${avro.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
             </dependency>
             <!--Java client-->
             <dependency>
